--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,13 @@
 fieldset{
     text-align: center;
 }
+.form-inline{
+    display: block;
+}
+
+@media (min-width: 768px){
+    .navbar-expand-md {
+        -ms-flex-pack: start;
+        justify-content: safe !important;
+    }
+}
