--- a/src/css/index.css
+++ b/src/css/index.css
@@ -40,6 +40,10 @@ fieldset {
 .form-inline {
   display: block; }
 
+a {
+  text-decoration: none;
+  color: black; }
+
 @media (min-width: 768px) {
   .navbar-expand-md {
     -ms-flex-pack: start;
